base/backstage-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
  annotations:
    argocd.argoproj.io/sync-wave: "0"
